# funding-arb-analysis

./: .gitignore  README.md  common.py  main.ipynb  nb_load_data.ipynb  nb_load_missing_drift_price.ipynb  nb_plot_all.ipynb  nb_plot_analysis.ipynb  nb_plot_basic.ipynb  nb_plot_heatmap.ipynb  nb_plot_hodl.ipynb  nb_plot_hodl_corr.ipynb  nb_plot_leveraged.ipynb  nb_plot_market_size_impact.ipynb  nb_plot_return.ipynb  np_plot_lev_bar.ipynb  pyproject.toml  result.csv  result1.csv  result2.csv  tmp_nb_plot_all.ipynb  tmp_nb_plot_basic.ipynb  tmp_nb_plot_leveraged.ipynb  tmp_nb_summarize_table.ipynb  utils.py
data/: bitmex_XBTUSDT.csv
modules/exchanges/: apollox.py  binance.py  bitmex.py  drift.py  dydx.py  gate.py  hyperliquid.py  kwenta.py  okx.py  perpetual.py  zeta.py
storage/: volume.csv  volume.json
