[tool.poetry]
name = "funding-backtest"
version = "0.1.0"
description = ""
authors = ["SainyTK <tanakorn0412@gmail.com>"]
readme = "README.md"
packages = [{include = "funding_backtest"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
requests = "^2.31.0"
web3 = "^6.11.3"
python-dotenv = "^1.0.0"
gql = "^3.4.1"
setuptools = "^68.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
